[package]
name = "twtodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-rs-sdk = "0.3.0"
warp = "0.3.2"
tokio = "1.21.1"
serde = "1.0.145"
reqwest = "0.11.12"
serde_json = "1.0.85"
dotenvy = "0.15.5"
